[workspace]
resolver = "3"
members = ["ch03", "getopt", "utils"]

[workspace.package]
version = "0.0.1"
authors = ["Simon Mayer"]
description = "Following along the small proglets in The Linux Programming Interface"
edition = "2024"

[workspace.dependencies]
libc = "0.2"    
utils = { path = "./utils" }