[workspace]
resolver = "3"
members = ["ch03", "ch04", "getopt", "tlpi"]

[workspace.package]
version = "0.0.1"
authors = ["Simon Mayer"]
description = "Following along the small proglets in The Linux Programming Interface"
edition = "2024"

[workspace.dependencies]
libc = "0.2"    
tlpi = { path = "./tlpi" }
bindgen = "0.72.1"
clap = { version = "4.5.60", features = ["derive"] }